--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "dist/nerv.ssr.js",
   "author": "yuche <i@yuche.me>",
   "license": "MIT",
-  "dependencies": {
-    "ts-jest": "^21.0.1"
-  },
+  "dependencies": {},
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^21.1.0",
@@ -18,6 +17,7 @@
     "nervjs": "^0.1.10",
     "rollup": "^0.50.0",
     "rollup-plugin-typescript2": "^0.5.2",
+    "ts-jest": "^21.0.1",
     "tslint": "^5.7.0",
     "typescript": "^2.5.2"
   },
